scrollbar fix

--- a/src/components/IceCream/IceCream.css
+++ b/src/components/IceCream/IceCream.css
@@ -8,6 +8,10 @@
   overflow: scroll;
 }
 
+.IceCream::-webkit-scrollbar {
+  display: none;
+}
+
 @media (min-width: 500px) and (min-height: 400px) {
   .IceCream {
     width: 350px;
